--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "gb-kanban-clean",
   "version": "0.1.0",
+  "scripts": {
+    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:ci": "npm run test -- --coverage"
+  },
   "keywords": [],
   "author": "Gabriel Belther Santos",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
@@ -17,6 +23,9 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.1.3",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
   }
 }
