--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gabriel Belther Santos",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -27,5 +28,8 @@
     "jest-environment-jsdom": "^28.1.2",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
