--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gabriel Belther Santos",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
