--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   "rules": {
     "no-console": "warn",
     "class-methods-use-this": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "import/extensions": ["error", "never"]
   }
 }
