--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "no-console": "warn",
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
-    "import/extensions": ["error", "never"]
+    "import/extensions": ["error", "never"],
+    "@typescript-eslint/lines-between-class-members": "off"
   }
 }
