--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
     "import/extensions": ["error", "never"],
-    "@typescript-eslint/lines-between-class-members": "off"
+    "@typescript-eslint/lines-between-class-members": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
