--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.3",
     "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
@@ -31,6 +33,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
