--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gb-kanban-clean",
   "version": "0.1.0",
   "scripts": {
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:ci": "npm run test -- --coverage"
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -27,10 +29,16 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.1.3",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
