--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "import/prefer-default-export": "off",
     "import/extensions": ["error", "never"],
     "@typescript-eslint/lines-between-class-members": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
