feat: ensure ValidationComposite return error if any validator fails

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "import/extensions": ["error", "never"],
     "@typescript-eslint/lines-between-class-members": "off",
     "react/react-in-jsx-scope": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "no-restricted-syntax": "off"
   }
 }
